# jeex-idea

./: .dockerignore  .env.template  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .ruff.toml  AGENTS.md  Makefile  README.md  REDIS_QA_VALIDATION_REPORT.md  SETUP.md  docker-compose.yml  opencode.json  otel-collector-config.yaml
.ai/: settings.local.json
backend/: .env.test  Dockerfile  REDIS_COMPREHENSIVE_TEST_REPORT.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_maintenance_fixes.py  test_redis_monitoring_integration.py  test_redis_validation.py
backend/alembic/: env.py
backend/alembic/versions/: 007_agent_framework_setup.py  db9e7a2f528c_initial_database_schema.py
backend/app/: __init__.py  constants.py  main.py
backend/app/agents/: __init__.py  context.py  dependencies.py  isolation.py  orchestrator.py  resilience.py  state_manager.py  telemetry.py  tracker.py
backend/app/agents/adk/: __init__.py  protocol.py
backend/app/agents/contracts/: __init__.py  base.py  stage_contracts.py
backend/app/api/endpoints/: agents.py  database_instrumentation.py  database_monitoring.py  documents.py  health.py  projects.py  redis_instrumentation_test.py  redis_monitoring.py  security_test.py  telemetry_test.py  vector.py  vector_test.py
backend/app/core/: backup.py  config.py  correlation.py  database.py  database_instrumentation.py  db_optimized.py  maintenance.py  monitoring.py  qdrant_telemetry.py  redis_instrumentation.py  redis_instrumentation_integration.py  resilient_exporter.py  security.py  telemetry.py  testing.py  vector.py
backend/app/db/: __init__.py
backend/app/domain/cache/: README.md  __init__.py  domain_services.py  entities.py  repository_interfaces.py  value_objects.py
backend/app/infrastructure/redis/: README.md  __init__.py  circuit_breaker.py  connection_factory.py  exceptions.py  instrumented_redis_service.py  redis_service.py
backend/app/infrastructure/repositories/: cache_repository.py  queue_repository.py  rate_limit_repository.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py
backend/app/monitoring/: README.md  __init__.py  alert_manager.py  dashboard.py  health_checker.py  performance_monitor.py  redis_metrics.py
backend/app/repositories/: __init__.py  base.py  project.py
backend/app/services/: README.md  sse.py
backend/app/services/cache/: cache_manager.py
backend/app/services/queues/: __init__.py  dead_letter.py  queue_manager.py  retry.py  workers.py
backend/app/services/queues/tests/: test_queue_manager.py
backend/app/services/rate_limiting/: __init__.py  middleware.py  rate_limiter.py  strategies.py
backend/app/services/rate_limiting/tests/: test_rate_limiter.py
backend/app/services/tests/: test_queue_integration.py  test_rate_limiting_integration.py
backend/app/services/vector/: __init__.py  collection_manager.py  search_service.py
backend/app/services/vector/domain/: entities.py
backend/app/services/vector/repositories/: interfaces.py  qdrant_repository.py
backend/docs/: redis_instrumentation_implementation.md
backend/tests/: conftest.py  test_blpop_fix.py  test_dead_letter_queue_fixes.py  test_maintenance_security.py  test_maintenance_security_simple.py  test_migration_rollback.py  test_observability_performance.py  test_observability_stack_comprehensive.py  test_observability_stack_final_qa.py  test_performance_load.py  test_phase3_database_optimization.py  test_phase4_integration.py  test_phase4_runner.py  test_qa_comprehensive_postgresql.py  test_qa_final_validation.py  test_qa_model_integration.py  test_qa_runner.py  test_qa_simplified.py  test_qa_static_validation.py  test_qa_story_validation.py  test_queue_manager_integration_simple.py  test_queue_manager_project_context.py  test_redis_comprehensive.py  test_redis_monitoring.py  test_redis_review_fixes.py  test_redis_review_fixes_final.py  test_redis_review_fixes_simple.py  test_security_controls.py  test_telemetry_resilience.py
backend/tests/fixtures/: vector_test_data.py
backend/tests/integration/: README.md  conftest.py  run_vector_isolation_tests.py  test_agent_orchestration.py  test_maintenance_fixes.py  test_vector_isolation.py  test_vector_security.py  validate_test_setup.py
backend/tests/integration/redis/: test_redis_instrumentation.py  test_redis_monitoring_integration.py  test_redis_simple.py  test_redis_validation.py
backend/tests/integration/telemetry/: test_resilience_validation.py
backend/tests/performance/: README.md  __init__.py  benchmark_runner.py  config.py  performance_reporter.py  requirements.txt  test_cache_performance.py  test_fixes_validation.py  test_performance_integration.py  test_vector_performance.py
backend/tests/performance/redis/: test_redis_realistic.py
backend/tests/test_infrastructure/: __init__.py  test_redis_integration.py
backend/tests/unit/: test_redis_instrumentation_import.py
backend/tests/unit/domain/: test_cache_domain.py
backend/tests/unit/services/: test_cache_manager.py
backend/tests/unit/services/vector/: test_domain_entities.py
backend/tests/unit/test_agents/: test_context.py  test_contracts.py  test_tracker.py
docs/: about.md  architecture.md  feature.md  markdown-formatting.md  specs.md
reviews/: README.md
scripts/: cleanup_telemetry.sh  (+4 more)
(+101 files in other folders)
